--- a/crystal_workingimprovements.html
+++ b/crystal_workingimprovements.html
@@ -35,6 +35,7 @@
     var crystalValue = 0;
     var wins = 0;
     var losses = 0;
+    var images = [];
     // var numberOptions.length = 4;
     //this var does not work yet
   
@@ -66,6 +67,11 @@
     // Next we create a for loop to create crystals for every numberOption.
     for (var i = 0; i < 4; i++) {
 
+          var images = [
+      "bluecrystal.jpg", 
+      "pinkcrystal.jpg", 
+      "whitecrystal.jpg", 
+      "redcrystal.jpg"];
       // For each iteration, we will create an imageCrystal
       var imageCrystal = $("<img>");
 
@@ -74,7 +80,7 @@
       imageCrystal.addClass("crystal-image");
 
       // Each imageCrystal will be given a src link to the crystal image
-      imageCrystal.attr("src", "http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg");
+      imageCrystal.attr("src", images[i]);
 
       // Each imageCrystal will be given a data attribute called data-crystalValue.
       // This data attribute will be set equal to the array value.
